# thumbplan

./: .gitignore  .ruff.toml  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md
.github/instructions/: githubrepo_py_links.instructions.md  githubrepo_ts_links.instructions.md  githubrepo_typing_links.instructions.md
.github/prompt-snippets/: asynctests.md  generatecli.md
.github/workflows/: copilot-setup-steps.yml
plancli/: README.md  finger_client.py  pyproject.toml
planfiles/2025/: andrews.project  andrews_20250517.plan
tests/: README.md
tests/unit/: test_client.py  test_server.py
thumbplanserver/: README.md  finger_server.py  finger_server_win.py  pyproject.toml
